--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ addons:
     branches:
       - master
       - develop
+notifications:
+  email: false
+  on_success: never
+  on_failure: always
 script:
   - sonar-scanner
 jdk:
