--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,14 @@
   <groupId>edu.msg.ro</groupId>
   <artifactId>jbugs-s1-a</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
   <name>JBugs Parent S1 A</name>
   <description>JBugs Parent project</description>
+  <properties>
+<project.build.sourceEconding>UTF-8</project.build.sourceEconding>
+<java.source>1.8</java.source>
+<java.target>1.8</java.target>
+<maven.compiler.source>1.8</maven.compiler.source>
+<maven.compiler.target>1.8</maven.compiler.target>
+</properties>
 </project>
