--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,16 @@
 	<packaging>pom</packaging>
 	<name>JBugs Parent</name>
 	<description>JBugs Parent project</description>
+
 	<properties>
 		<project.build.sourceEconding>UTF-8</project.build.sourceEconding>
 		<java.source>1.8</java.source>
 		<java.target>1.8</java.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<payara.versio>4.1.1.171</payara.versio>
 	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -22,15 +25,61 @@
 				<version>7.0</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.arquillian</groupId>
+				<artifactId>arquillian-bom</artifactId>
+				<version>1.1.11.Final</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.arquillian.container</groupId>
+				<artifactId>arquillian-container-test-api</artifactId>
+				<version>1.1.11.Final</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<modules>
-		<module>jbugs-persistence</module>
-		<module>jbugs-business</module>
-		<module>jbugs-client</module>
-		<module>jbugs-ear</module>
-	</modules>
 
+	<dependencies>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.arquillian.junit</groupId>
+			<artifactId>arquillian-junit-container</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.arquillian.protocol</groupId>
+			<artifactId>arquillian-protocol-servlet</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<scope>test</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<pluginManagement>
@@ -91,4 +140,76 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<profiles>
+		<!-- The normal build - active by default -->
+		<profile>
+			<id>normal-build</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+
+			<modules>
+				<module>jbugs-persistence</module>
+				<module>jbugs-business</module>
+				<module>jbugs-client</module>
+				<module>jbugs-ear</module>
+			</modules>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skipTests>true</skipTests>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<!-- The Arquillian build -->
+		<profile>
+			<id>payara-remote</id>
+
+			<dependencies>
+				<!-- The actual Arquillian connector -->
+				<dependency>
+					<groupId>org.omnifaces</groupId>
+					<artifactId>arquillian-payara-server-4-remote</artifactId>
+					<version>1.0-beta-SNAPSHOT</version>
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<systemPropertyVariables>
+								<javaEEServer>payara-remote</javaEEServer>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+				<testResources>
+					<testResource>
+						<directory>src/test/resources</directory>
+						<filtering>true</filtering>
+					</testResource>
+					<testResource>
+						<directory>src/test/resources-glassfish-remote</directory>
+						<filtering>true</filtering>
+					</testResource>
+				</testResources>
+			</build>
+
+			<modules>
+				<module>jbugs-persistence</module>
+				<module>jbugs-business</module>
+			</modules>
+		</profile>
+	</profiles>
 </project>
