--- a/jbugs-client/src/main/webapp/WEB-INF/web.xml
+++ b/jbugs-client/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,10 @@
 		<welcome-file>hello.xhtml</welcome-file>
 	</welcome-file-list>
 	
+	<session-config>
+		<session-timeout>30 </session-timeout>
+	</session-config>
+	
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
