--- a/jbugs-client/src/main/webapp/WEB-INF/web.xml
+++ b/jbugs-client/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,11 @@
 	</welcome-file-list>
 	
 	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>bluesky</param-value>
+	</context-param>
+	
+	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
